@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.22124-r1 (13 Jul 2013)
+
+  13 Jul 2013; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.01.22124-r1.ebuild:
+  Bring ebuild in line with gentoo-x86 version
+
 *portage-2.2.01.22124 (10 Jul 2013)
 
   10 Jul 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22124.ebuild,
